--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -146,6 +146,7 @@ jobs:
         cd b
         cmake ^
           -DPython3_ROOT_DIR="%CONDA_ROOT%" ^
+          -DCMAKE_AUTOUIC=OFF ^
           -DCMAKE_BUILD_TYPE=Release ^
           -G"Visual Studio 17 2022" ^
           %GITHUB_WORKSPACE%
