--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -131,7 +131,7 @@ jobs:
     - name: Install dependencies with conda
       shell: bash
       run: |
-        conda install -c conda-forge "qt>=5.12"
+        conda install -c conda-forge qt-main
 
     - name: Remove hosted Python
       shell: bash
