--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -148,6 +148,7 @@ jobs:
           -DPython3_ROOT_DIR="%CONDA_ROOT%" ^
           -DCMAKE_AUTOUIC=OFF ^
           -DCMAKE_BUILD_TYPE=Release ^
+          -DVTKm_MODULE_ENABLE_vtkm_filter_scalar_topology=NO ^
           -G"Visual Studio 17 2022" ^
           %GITHUB_WORKSPACE%
 
