--- a/.github/workflows/headless.yml
+++ b/.github/workflows/headless.yml
@@ -124,7 +124,7 @@ jobs:
     - name: Install dependencies with conda
       shell: bash
       run: |
-        conda install -c conda-forge glew
+        conda install -c conda-forge glew python=3.10
 
     - name: Remove hosted Python
       shell: bash
