--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -84,6 +84,7 @@ jobs:
     - name: Install macOS dependencies
       run: |
         # ParaView dependencies
+        brew reinstall python@3.11
         brew install --cask xquartz
         brew install wget libomp mesa glew qt@5 ninja python
 
