--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -72,13 +72,14 @@ jobs:
   # macOS #
   # ----- #
   build-macos:
-    runs-on: macos-latest
+    runs-on: macos-12
     steps:
     - uses: actions/checkout@v3
       name: Checkout TTK-ParaView source code
 
     - name: Remove hosted Python
       run: |
+        sudo rm -rf /Library/Frameworks/Python.framework/
         sudo rm -rf /usr/local/Frameworks/Python.framework
 
     - name: Install macOS dependencies
