--- a/.github/workflows/headless.yml
+++ b/.github/workflows/headless.yml
@@ -49,9 +49,12 @@ jobs:
           $GITHUB_WORKSPACE
 
     - name: Build ParaView
+      continue-on-error: true
       run: |
         cd build
-        cmake --build . --parallel
+        cmake --build . --parallel -DPARAVIEW_VERSION=5.13
+        echo -e "===\n\n\nDEBUG: displaying versioning"
+        cat build/Utilities/Versioning/vtkPVVersionQuick.h
 
     - name: Create ParaView package
       run: |
