[ci-pv513] trying against 24.04

--- a/.github/workflows/headless.yml
+++ b/.github/workflows/headless.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04]
+        os: [ubuntu-20.04, ubuntu-22.04, ubuntu-24.04]
     steps:
     - uses: actions/checkout@v4
       name: Checkout TTK-ParaView source code
