[ci-pv513] trying to build against ubuntu 24.04

--- a/.github/workflows/headless.yml
+++ b/.github/workflows/headless.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04]
+        os: [ubuntu-20.04, ubuntu-22.04, ubuntu-24.04]
     steps:
     - uses: actions/checkout@v4
       name: Checkout TTK-ParaView source code
@@ -231,6 +231,15 @@ jobs:
         tag: ${{ github.ref }}
         file: ttk-paraview-headless-ubuntu-22.04/ttk-paraview.deb
         asset_name: ttk-paraview-headless-ubuntu-22.04.deb
+
+    - name: Upload Ubuntu Noble Numbat .deb as Release Asset
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        tag: ${{ github.ref }}
+        file: ttk-paraview-headless-ubuntu-24.04/ttk-paraview.deb
+        asset_name: ttk-paraview-headless-ubuntu-24.04.deb
+
 
     - name: Upload MacOS 14 (arm64) .tar.gz as Release Asset
       uses: svenstaro/upload-release-action@v2
