--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -75,7 +75,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-12, macos-14]
+        os: [macos-13, macos-14, macos-15]
     steps:
     - uses: actions/checkout@v4
       name: Checkout TTK-ParaView source code
@@ -239,21 +239,29 @@ jobs:
         file: ttk-paraview-ubuntu-24.04/ttk-paraview.deb
         asset_name: ttk-paraview-$tag-ubuntu-24.04.deb
 
-    - name: Upload MacOS 14 (arm64) .tar.gz as Release Asset
+    - name: Upload MacOS 15 .tar.gz as Release Asset
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        tag: ${{ github.ref }}
+        file: ttk-paraview-macos-15/ttk-paraview.tar.gz
+        asset_name: ttk-paraview-$tag-macos-15.tar.gz
+
+    - name: Upload MacOS 14 .tar.gz as Release Asset
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         tag: ${{ github.ref }}
         file: ttk-paraview-macos-14/ttk-paraview.tar.gz
-        asset_name: ttk-paraview-$tag-macos-14-arm64.tar.gz
+        asset_name: ttk-paraview-$tag-macos-14.tar.gz
 
-    - name: Upload MacOS 12 .tar.gz as Release Asset
+    - name: Upload MacOS 13 .tar.gz as Release Asset
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         tag: ${{ github.ref }}
-        file: ttk-paraview-macos-12/ttk-paraview.tar.gz
-        asset_name: ttk-paraview-$tag-macos-12.tar.gz
+        file: ttk-paraview-macos-13/ttk-paraview.tar.gz
+        asset_name: ttk-paraview-$tag-macos-13.tar.gz
 
     - name: Upload .exe as Release Asset
       uses: svenstaro/upload-release-action@v2
