--- a/.github/workflows/headless.yml
+++ b/.github/workflows/headless.yml
@@ -88,7 +88,7 @@ jobs:
     - name: Install macOS dependencies
       run: |
         # ParaView dependencies
-        brew reinstall python
+        brew reinstall python:3.12
         brew install --cask xquartz
         brew install ninja open-mpi
 
